--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/
+    - assets/Confetti.png
+    - assets/ticket.png
     - assets/logo/
   #   - images/a_dot_ham.jpeg
 
