--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutix
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,38 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
   async_button_builder: ^3.0.0+1
   cloud_firestore: ^4.10.0
+  cupertino_icons: ^1.0.6
+  email_validator: ^2.1.17
   equatable: ^2.0.5
   firebase_auth: ^4.11.0
   firebase_core: ^2.18.0
+  flutter:
+    sdk: flutter
   google_fonts: ^6.1.0
   google_sign_in: ^6.1.5
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -71,19 +65,37 @@ flutter:
     - assets/ticket.png
     - assets/logo/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: "Raleway"
+      fonts:
+        - asset: assets/font/raleway/Raleway-Regular.ttf
+        - asset: assets/font/raleway/Raleway-Bold.ttf
+          weight: 700
+        - asset: assets/font/raleway/Raleway-Italic.ttf
+          style: italic
+        - asset: assets/font/raleway/Raleway-Medium.ttf
+          weight: 500
+        - asset: assets/font/raleway/Raleway-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/font/raleway/Raleway-SemiBold.ttf
+          weight: 600
+
+    - family: "Oswald"
+      fonts:
+        - asset: assets/font/oswald/Oswald-Light.ttf
+          weight: 300
+        - asset: assets/font/oswald/Oswald-Medium.ttf
+          weight: 500
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
