--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   google_sign_in: ^6.1.5
+  http: ^1.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
