--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.1.0
   google_sign_in: ^6.1.5
   http: ^1.1.0
+  provider: ^6.1.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
