--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,22 +33,21 @@ dependencies:
   cupertino_icons: ^1.0.6
   email_validator: ^2.1.17
   equatable: ^2.0.5
+  firebase_app_check: ^0.2.1+5
   firebase_auth: ^4.11.0
   firebase_core: ^2.18.0
+  firebase_storage: ^11.5.2
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
   google_sign_in: ^6.1.5
   http: ^1.1.0
+  image_picker: ^1.0.4
   intl: ^0.18.1
+  intl_utils: ^2.8.6
   provider: ^6.1.1
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
